--- a/src/positive-html.css
+++ b/src/positive-html.css
@@ -147,7 +147,7 @@ p, li {
 span.keywords {
   font-size: 12px;
   color: #{{color 'accent'}};
-  padding: 6px 6px;
+  padding: 4px 6px;
 }
 
 span.keyword-bubble {
@@ -217,7 +217,7 @@ header > span.fa {
 }
 
 #references > p, #references > p > a {
-  color: turquoise;
+  color: #{{color 'accent'}};
   text-align: center;
   margin: 30px;
   font-weight: bold;
