--- a/src/positive-pdf.css
+++ b/src/positive-pdf.css
@@ -7,12 +7,12 @@ html, body, main, section, header, ul, p, h1, h2, h3 {
 }
 
 a {
-  color: #0064BD;
+  color: #{{color 'hyperlink'}};
   text-decoration: none;
 }
 
 a:visited {
-  color: #7B0796;
+  /*color: paleturquoise;*/
 }
 
 a:hover {
@@ -48,11 +48,12 @@ table {
   width: 100%;
   text-transform: uppercase;
   font-size: 1.3em;
+  font-weight: lighter;
 }
 
 td:first-child {
   text-align: right;
-  color: #c00000;
+  color: #{{color 'accent'}};
   /* letter-spacing: 2px; PDF hates letter spacing */
   font-weight: bold;
 }
@@ -115,7 +116,15 @@ p, li {
 
 span.keywords {
   font-size: 12px;
-  color: #B16666;
+  color: #{{color 'accent'}};
+  padding: 4px 6px;
+}
+
+span.keyword-bubble {
+  background-color: #F5F5F5;
+  border-radius: 6px;
+  padding: 4px 6px;
+  margin-right: 3px;
 }
 
 thead {
@@ -175,4 +184,5 @@ header > span.fa {
 #skills td {
   padding-top: 7px;
   padding-bottom: 7px;
+  text-align: left;
 }
