renamed 'service' to 'other experience'

--- a/src/partials/service.hbs
+++ b/src/partials/service.hbs
@@ -2,7 +2,7 @@
 <hr>
 <section id="service">
   {{#> header-samples }}
-    {{> header-icon _title="SERVICE" _section="service" _hdricon=(lookup . '_icon') }}
+    {{> header-icon _title="SERVICE" _section="other experience" _hdricon=(lookup . '_icon') }}
   {{/header-samples}}
   {{#each r.service.history}}
     {{#> body-service }}
