--- a/src/partials/service.hbs
+++ b/src/partials/service.hbs
@@ -7,11 +7,11 @@
   {{#each r.service.history}}
     {{#> body-service }}
     <div>
-    <h3><em>{{ position }}</em>,
+    <h3><em>{{{ position }}}</em>,
       {{#if url}}
-      <a href="{{{ url }}}">{{ organization }}</a>
+      <a href="{{{ url }}}">{{{ organization }}}</a>
       {{else}}
-      {{ organization }}
+      {{{ organization }}}
       {{/if}}
     </h3>
     <span class="tenure">{{dateRange .}}</span>
