redesigned functional layout

--- a/src/partials/employment.hbs
+++ b/src/partials/employment.hbs
@@ -17,8 +17,8 @@
         <span class="tenure">{{dateRange .}}</span>
         {{#if location}}<span class="location">{{location}}</span>{{/if}}
       <p>{{{ summary }}}</p>
-      {{> highlights }}
-        {{#if keywords}}<span class="keywords">{{#each keywords}}<span class="keyword-bubble">{{{ . }}}</span>{{/each}}</span>{{/if}}
+<!--        {{> highlights }}-->
+<!--        {{#if keywords}}<span class="keywords">{{#each keywords}}<span class="keyword-bubble">{{{ . }}}</span>{{/each}}</span>{{/if}}-->
     </div>
     {{/body-employment}}
   {{/each}}
