--- a/src/partials/service-pdf.hbs
+++ b/src/partials/service-pdf.hbs
@@ -17,7 +17,7 @@
     <span class="tenure">{{dateRange .}}</span>
     {{#if location}}<span class="location">{{location}}</span>{{/if}}
     <p>{{{ summary }}}</p>
-    {{> highlights }}
+<!--    {{> highlights }}-->
     </div>
     {{/body-service }}
   {{/each}}
